--- a/css/styles.css
+++ b/css/styles.css
@@ -78,23 +78,16 @@ button:hover {
 }
 .dashboard {
     height: 391px;
-    width:640px
+    width:640px;
+    margin-bottom: 72px;
 }
 
 .bot {
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 12px;
 }
-.facebook {
-    height: 20px;
-    width: 20px;
-}
-.twitter {
-    height: 35px;
-    width: 35px;
-}
-.instagram {
-    height: 30px;
-    width: 30px;
+
+ .facebook, .instagram , .twitter {
+    width: 32px;
 } 
